# kspace-segmentation

./: .gitignore  README.md  config.yml  pyproject.toml
.github/issue_template/: bug_report.yml  feature_request.yml
datasets/: DATASETS.md
docs/source/: conf.py  data.lightning.rst  data.rst  data.transforms.rst  index.rst  main.rst  model.lightning.rst  model.loss.rst  model.modules.rst  model.rst
kseg/: __init__.py  main.py
kseg/data/: __init__.py  custom_torchio.py  lightning.py  sampler.py  transforms.py
kseg/model/: __init__.py  lightning.py  loss.py  modules.py
kseg/utils/: config_handler.py  convert.py
scripts/: custom_model_eval.ipynb  nnUNet_eval.ipynb  oasis_mgz_to_nifti.sh  prune_oasis_dataset.py  wavelet.ipynb
tests/: test_modules.py  test_transforms.py
