[build-system]
requires = ["setuptools >= 58.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kseg"
version = "1.0.0"
authors = [
    {name = "Reza Eghbali", email="eghbali@uw.edu"},
    {email = "reza.eghbali@ucsf.edu"},
    {name = "Erik Gosche", email="erik.gosche@ucsf.edu"},
    {email = "erik.goesche@fau.de"}
]
description = "K-space segmentation models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'click == 8.1.6',
    'einops == 0.6.1',
    'opencv-python',
    'pandas',
    'perceiver-io @ git+https://github.com/egosche/perceiver-io@main',
    'pyarrow',
    'pytorch_lightning == 2.0.5',
    'ray == 2.5.1',
    'torch == 2.0.1',
    'torchio == 0.18.92',
    'torchmetrics == 0.9.3',
    'torchvision == 0.15.2'
]

[project.optional-dependencies]
docs = ["sphinx", "furo"]

[tool.setuptools]
py-modules = ["kseg"]

[project.scripts]
kseg = "kseg.main:main"
